# php-checker

./: .gitignore  ADD_RULE.md  Cargo.toml  PHPDOC_IMPLEMENTATION_GUIDE.md  PHPDOC_PROGRESS.md  PHPDOC_TEST_COVERAGE.md  PHPDOC_TEST_PLAN.md  README.md  RULES.md  TEST_CONFIG.md  TEST_IMPROVEMENTS.md  TEST_ORGANIZATION.md  cUserskristprojectsphp-checkertest_debug.php  debug_full.txt  test_comprehensive.php  test_return.php  test_shaped_direct.php  test_structured.php  test_structured_conflict.php
.claude/: settings.local.json
src/: analyzer.rs  lib.rs  main.rs
src/analyzer/: config.rs  fix.rs  ignore.rs  parser.rs  project.rs  rules.rs  test_config.rs
src/analyzer/phpdoc/: extractor.rs  mod.rs  parser.rs  types.rs
src/analyzer/rules/: array_key_not_defined.rs  deprecated_api.rs  (+18 more)
tests/: README.md  fix_suite.rs  invalid_suite.rs  valid_suite.rs
tests/future/: README.md
tests/invalid/: array_key_not_defined.expect  deprecated_api.expect  duplicate_declaration.php  hard_credentials.expect  ignore_cleanup_block.expect  ignore_cleanup_block.php  ignore_cleanup_group.php  ignore_cleanup_hash.php  ignore_cleanup_inline.php  impossible_comparison.expect  impossible_comparison.php  invalid_this.expect  invalid_this.php  missing_return.expect  mutating_literal.php  php_checker.yaml  strict_missing.php  type_mismatch.expect  unreachable.expect  unused_use.expect  unused_use.php  unused_variable.expect
tests/valid/: class_config.php  function_variadic.php  ignore_all.php  ignore_file_alias_block.php  ignore_unused_use.php  simple_assignment.php  strict_declared.php
(+157 files in other folders)
