[package]
name = "php-checker"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
walkdir = "2.5"
tree-sitter = "0.20"
tree-sitter-php = "0.20"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
serde_json = "1.0"
rayon = "1.10"
indicatif = "0.17"
glob = "0.3"
notify = "5.1"

[[bin]]
name = "dump-tree"
path = "src/bin/dump_tree.rs"
